fix a bug where invisible links could be clicked
as we never really remove products from the DOM, we need to make sure
the items with `opacity: 0` are not clickable.

--- a/scss/pages/_new-landing.scss
+++ b/scss/pages/_new-landing.scss
@@ -27,6 +27,7 @@
           opacity: 0;
           max-height: 0;
           padding: 0;
+          pointer-events: none;
         }
     }
     &__header {
